Raccourcis entrée (password)

--- a/src/main/resources/ihm/loggin-view.fxml
+++ b/src/main/resources/ihm/loggin-view.fxml
@@ -61,7 +61,7 @@
                <Font name="Roboto Condensed" size="18.0" />
             </font>
          </TextField>
-         <PasswordField fx:id="password" alignment="CENTER" layoutX="417.0" layoutY="126.0" prefHeight="40.0" prefWidth="230.0" promptText="Mot de passe" style="-fx-background-color: #224957; -fx-text-inner-color: #FFFFFF;">
+         <PasswordField fx:id="password" alignment="CENTER" layoutX="417.0" layoutY="126.0" prefHeight="40.0" prefWidth="230.0" promptText="Mot de passe" onKeyPressed="#buttonPressed" style="-fx-background-color: #224957; -fx-text-inner-color: #FFFFFF;">
             <font>
                <Font name="Roboto Condensed" size="18.0" />
             </font>
