--- a/src/main/resources/ihm/inscription-view.fxml
+++ b/src/main/resources/ihm/inscription-view.fxml
@@ -17,7 +17,7 @@
          <children>
             <ImageView fitHeight="89.0" fitWidth="1064.0" layoutY="-6.0" rotate="180.0">
                <image>
-                  <Image url="@../../../../../../../Téléchargements/Vectors.png" />
+                  <Image url="@../img/Vectors.png" />
                </image>
             </ImageView>
          </children>
@@ -42,7 +42,7 @@
                <children>
                   <ImageView fx:id="retourLogginArrow" fitHeight="45.0" fitWidth="45.0" layoutX="7.0" layoutY="8.0" rotate="195.0">
                      <image>
-                        <Image url="@../../../../../../../Téléchargements/Group%201.png" />
+                        <Image url="@../img/Group%201.png" />
                      </image>
                   </ImageView>
                </children>
