--- a/src/main/resources/ihm/annuaire-view.fxml
+++ b/src/main/resources/ihm/annuaire-view.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -50,24 +51,23 @@
                 </ImageView>
             </children>
         </AnchorPane>
-      <Pane fx:id="tableauEnt" layoutX="177.0" layoutY="147.0" prefHeight="123.0" prefWidth="691.0">
-         <children>
-            <Label fx:id="nomEntreprise" layoutX="199.0" layoutY="22.0" prefHeight="79.0" prefWidth="254.0" text="Entreprise" textAlignment="JUSTIFY">
-               <font>
-                  <Font size="49.0" />
-               </font></Label>
-            <Label fx:id="villeEntreprise" layoutX="495.0" layoutY="14.0" prefHeight="35.0" prefWidth="169.0" text="Ville" textAlignment="CENTER">
-               <font>
-                  <Font size="24.0" />
-               </font></Label>           <Button fx:id="details" layoutX="541.0" layoutY="69.0" mnemonicParsing="false" text="Détails" />
-
-            <ImageView fx:id="img_ent_default" layoutX="23.0" layoutY="9.0">
-               <image>
-                  <Image url="@../img/entreprise_default.png" />
-               </image>
-            </ImageView>
-         </children>
-      </Pane>
       <Slider layoutX="1043.0" layoutY="124.0" orientation="VERTICAL" prefHeight="435.0" prefWidth="14.0" rotate="180.0" />
+      <ListView layoutX="211.0" layoutY="158.0" prefHeight="200.0" prefWidth="627.0" />
+
+      <ImageView fx:id="img_ent_default" layoutX="242.0" layoutY="194.0">
+         <image>
+            <Image url="@../img/entreprise_default.png" />
+         </image>
+      </ImageView>
+      <Label fx:id="nomEntreprise" layoutX="398.0" layoutY="208.0" prefHeight="79.0" prefWidth="254.0" text="Entreprise" textAlignment="JUSTIFY">
+         <font>
+            <Font size="49.0" />
+         </font>
+      </Label>
+      <Label fx:id="villeEntreprise" layoutX="652.0" layoutY="191.0" prefHeight="35.0" prefWidth="169.0" text="Ville" textAlignment="CENTER">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>           <Button fx:id="details" layoutX="701.0" layoutY="317.0" mnemonicParsing="false" text="Détails" />
     </children>
 </Pane>
