--- a/src/main/resources/ihm/inscription-view.fxml
+++ b/src/main/resources/ihm/inscription-view.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -69,40 +70,30 @@
             </AnchorPane>
             <AnchorPane layoutX="-2.0" layoutY="145.0" prefHeight="32.0" prefWidth="483.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="125.0">
                <children>
-                  <DatePicker fx:id="dateNaissance" prefHeight="29.0" prefWidth="230.0" promptText="Date de naissance" style="-fx-cursor: hand;" AnchorPane.leftAnchor="248.0" AnchorPane.rightAnchor="5.0" />
-                  <TextField fx:id="prenom" layoutX="190.0" prefHeight="29.0" prefWidth="230.0" promptText="Prenom" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="248.0" AnchorPane.topAnchor="0.0" />
+                  <TextField fx:id="prenom" layoutX="190.0" prefHeight="29.0" prefWidth="230.0" promptText="Prenom" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="3.0" />
+                  <DatePicker fx:id="dateNaissance" layoutX="252.0" layoutY="4.0" prefHeight="29.0" prefWidth="230.0" promptText="Date de naissance" style="-fx-cursor: hand;" AnchorPane.leftAnchor="252.0" AnchorPane.rightAnchor="8.0" />
                </children>
             </AnchorPane>
             <AnchorPane layoutY="172.0" prefHeight="25.0" prefWidth="483.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="175.0">
                <children>
-                  <TextField fx:id="email" layoutX="155.0" layoutY="1.0" prefHeight="29.0" prefWidth="230.0" promptText="Adresse e-mail" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="3.0" />
+                  <TextField fx:id="email" layoutX="7.0" prefHeight="29.0" prefWidth="230.0" promptText="Adresse e-mail" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="3.0" />
                   <TextField fx:id="telephone" layoutX="333.0" prefHeight="29.0" prefWidth="230.0" promptText="N° de téléphone" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="3.0" />
                </children>
             </AnchorPane>
             <AnchorPane layoutY="223.0" prefHeight="25.0" prefWidth="483.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="225.0">
                <children>
-                  <TextField fx:id="password" layoutX="155.0" layoutY="1.0" prefHeight="29.0" prefWidth="230.0" promptText="Mot de passe" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="3.0" />
-                  <TextField fx:id="passwordConfirmation" layoutX="333.0" prefHeight="29.0" prefWidth="230.0" promptText="Confirmation du mot de passe" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="3.0" />
+                  <PasswordField fx:id="password" prefHeight="29.0" prefWidth="230.0" promptText="Mot de passe" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="3.0" />
+                  <PasswordField fx:id="passwordConfirmation" prefHeight="29.0" prefWidth="230.0" promptText="Confirmation du mot de passe" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="3.0" />
                </children>
             </AnchorPane>
-            <AnchorPane layoutX="1.0" layoutY="363.0" prefHeight="70.0" prefWidth="483.0" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="-1.0">
+            <AnchorPane layoutX="7.0" layoutY="277.0" prefHeight="25.0" prefWidth="483.0" AnchorPane.topAnchor="275.0">
                <children>
-                  <TextField fx:id="reponseQuestion" layoutX="86.0" layoutY="42.0" prefHeight="29.0" prefWidth="312.0" promptText="Réponse à la question" AnchorPane.leftAnchor="86.0" AnchorPane.topAnchor="42.0" />
-                  <Label alignment="CENTER" layoutX="228.0" layoutY="14.0" text="Quel est le nom de votre premier animal de compagnie ?" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-                     <font>
-                        <Font name="System Bold Italic" size="14.0" />
-                     </font>
-                  </Label>
-               </children>
-            </AnchorPane>
-            <AnchorPane layoutY="293.0" prefHeight="25.0" prefWidth="483.0" AnchorPane.topAnchor="275.0">
-               <children>
-                  <TextField fx:id="numero" layoutX="155.0" layoutY="1.0" prefHeight="29.0" prefWidth="83.0" promptText="N° de voie" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="3.0" />
-                  <TextField fx:id="typeDeVoie" layoutX="97.0" layoutY="1.0" prefHeight="29.0" prefWidth="137.0" promptText="Type de voie" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="249.0" AnchorPane.topAnchor="3.0" />
+                  <TextField fx:id="numero" layoutY="2.0" prefHeight="29.0" prefWidth="83.0" promptText="N° de voie" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="3.0" />
+                  <TextField fx:id="typeDeVoie" layoutX="90.0" layoutY="3.0" prefHeight="29.0" prefWidth="137.0" promptText="Type de voie" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="256.0" AnchorPane.topAnchor="3.0" />
                   <TextField fx:id="adresse" layoutX="252.0" layoutY="4.0" prefHeight="29.0" prefWidth="230.0" promptText="Adresse" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="3.0" />
                </children>
             </AnchorPane>
-            <AnchorPane layoutY="331.0" prefHeight="25.0" prefWidth="483.0" AnchorPane.topAnchor="325.0">
+            <AnchorPane layoutX="4.0" layoutY="327.0" prefHeight="25.0" prefWidth="483.0" AnchorPane.topAnchor="325.0">
                <children>
                   <TextField fx:id="codePostal" layoutX="155.0" layoutY="1.0" prefHeight="29.0" prefWidth="230.0" promptText="Code postal" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="3.0" />
                   <TextField fx:id="ville" layoutX="333.0" prefHeight="29.0" prefWidth="230.0" promptText="Ville" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="3.0" />
@@ -117,7 +108,13 @@
             <Label fx:id="wrongPrenom" alignment="CENTER" layoutX="253.0" layoutY="107.0" prefWidth="230.0" textFill="RED" AnchorPane.leftAnchor="5.0" />
             <Label fx:id="wrongAdresse" alignment="CENTER" layoutX="129.0" layoutY="256.0" prefWidth="230.0" textFill="RED" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="260.0" />
             <Label fx:id="wrongVille" alignment="CENTER" layoutX="248.0" layoutY="310.0" prefWidth="230.0" textFill="RED" AnchorPane.rightAnchor="5.0" />
-            <Label fx:id="wrongReponse" alignment="CENTER" layoutX="89.0" layoutY="434.0" prefHeight="17.0" prefWidth="312.0" textFill="RED" />
+            <Label fx:id="wrongReponse" alignment="CENTER" layoutX="99.0" layoutY="394.0" prefHeight="17.0" prefWidth="312.0" textFill="RED" />
+            <Label alignment="CENTER" layoutX="-3.0" layoutY="374.0" text="Quel est le nom de votre premier animal de compagnie ?" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+               <font>
+                  <Font name="System Bold Italic" size="14.0" />
+               </font>
+            </Label>
+            <TextField fx:id="reponseQuestion" layoutX="99.0" layoutY="414.0" prefHeight="29.0" prefWidth="312.0" promptText="Réponse à la question" AnchorPane.leftAnchor="99.0" AnchorPane.topAnchor="414.0" />
          </children>
       </AnchorPane>
    </children>
