--- a/src/main/resources/ihm/recuperation-view.fxml
+++ b/src/main/resources/ihm/recuperation-view.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -17,12 +18,16 @@
          </ImageView>
          <Button fx:id="valider" alignment="CENTER" layoutX="417.0" layoutY="87.0" mnemonicParsing="false" onAction="#sendForm" prefHeight="40.0" prefWidth="230.0" style="-fx-background-color: #20DF7F; -fx-cursor: hand;" text="Valider" textAlignment="CENTER">
             <font>
-               <Font name="Roboto Condensed" size="18.0" />
+               <Font size="14.0" />
             </font>
          </Button>
-         <TextField fx:id="newPassword" alignment="CENTER" layoutX="417.0" layoutY="20.0" prefHeight="40.0" prefWidth="230.0" promptText="Nouveau mot de passe" style="-fx-background-color: #224957; -fx-text-inner-color: #FFFFFF;">
+         <Label fx:id="question" alignment="CENTER" layoutY="-11.0" prefHeight="17.0" prefWidth="642.0" text="Quel est le nom de votre premier animal de compagnie ?" textFill="#224957" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
             <font>
-               <Font name="Roboto Condensed" size="18.0" />
+               <Font name="System Bold Italic" size="16.0" />
+            </font></Label>
+         <TextField fx:id="reponse" alignment="CENTER" layoutX="417.0" layoutY="28.0" prefHeight="40.0" prefWidth="230.0" promptText="Votre réponse" style="-fx-background-color: #224957; -fx-text-inner-color: #FFFFFF;">
+            <font>
+               <Font size="14.0" />
             </font>
          </TextField>
       </AnchorPane>
@@ -55,25 +60,23 @@
    </top>
    <center>
       <AnchorPane prefHeight="200.0" prefWidth="1064.0" BorderPane.alignment="CENTER">
-         <TextField fx:id="identifiant" alignment="CENTER" layoutX="417.0" layoutY="56.0" prefHeight="40.0" prefWidth="230.0" promptText="Identifiant" style="-fx-background-color: #224957; -fx-text-inner-color: #FFFFFF;">
-            <font>
-               <Font name="Roboto Condensed" size="18.0" />
-            </font>
-         </TextField>
-         <TextField fx:id="reponse" alignment="CENTER" layoutX="417.0" layoutY="151.0" prefHeight="40.0" prefWidth="230.0" promptText="Votre réponse" style="-fx-background-color: #224957; -fx-text-inner-color: #FFFFFF;">
-            <font>
-               <Font name="Roboto Condensed" size="18.0" />
-            </font>
-         </TextField>
-         <Label fx:id="question" alignment="CENTER" layoutY="113.0" prefHeight="17.0" prefWidth="642.0" text="Quel est le nom de votre premier animal de compagnie ?" textFill="#224957" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-            <font>
-               <Font size="18.0" />
-            </font></Label>
-         <Label fx:id="errorLogin" alignment="CENTER" layoutX="533.0" layoutY="14.0" prefHeight="17.0" prefWidth="13.0" textFill="RED" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+         <TextField fx:id="identifiant" alignment="CENTER" layoutX="417.0" layoutY="24.0" prefHeight="40.0" prefWidth="230.0" promptText="Identifiant" style="-fx-background-color: #224957; -fx-text-inner-color: #FFFFFF;">
             <font>
                <Font size="14.0" />
             </font>
-         </Label>
+         </TextField>
+         <Label fx:id="errorLogin" alignment="CENTER" layoutY="4.0" prefHeight="17.0" prefWidth="13.0" textFill="RED" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+         <PasswordField fx:id="newPassword" alignment="CENTER" layoutX="417.0" layoutY="90.0" prefHeight="40.0" prefWidth="230.0" promptText="Nouveau mot de passe" style="-fx-background-color: #224957; -fx-text-inner-color: #FFFFFF;">
+            <font>
+               <Font size="14.0" />
+            </font>
+         </PasswordField>
+         <PasswordField fx:id="confirmationNewPassword" alignment="CENTER" layoutX="417.0" layoutY="151.0" prefHeight="40.0" prefWidth="230.0" promptText="Confirmation du mot de passe" style="-fx-background-color: #224957; -fx-text-inner-color: #FFFFFF;">
+            <font>
+               <Font size="14.0" />
+            </font>
+         </PasswordField>
+         <Label fx:id="mdpIdentique" alignment="CENTER" contentDisplay="TOP" layoutX="418.0" layoutY="73.0" prefHeight="17.0" prefWidth="229.0" textFill="RED" />
       </AnchorPane>
    </center>
 </BorderPane>
