--- a/src/main/resources/ihm/accueil-view.fxml
+++ b/src/main/resources/ihm/accueil-view.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
@@ -53,5 +54,6 @@
             </ImageView>
          </children>
       </AnchorPane>
+      <FlowPane fx:id="container" layoutX="247.0" layoutY="100.0" prefHeight="343.0" prefWidth="570.0" />
    </children>
 </Pane>
