--- a/src/main/resources/ihm/accueil-view.fxml
+++ b/src/main/resources/ihm/accueil-view.fxml
@@ -2,10 +2,10 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
@@ -54,6 +54,6 @@
             </ImageView>
          </children>
       </AnchorPane>
-      <FlowPane fx:id="container" layoutX="247.0" layoutY="100.0" prefHeight="343.0" prefWidth="570.0" />
+      <ListView fx:id="myListView" layoutX="232.0" layoutY="129.0" prefHeight="380.0" prefWidth="600.0" />
    </children>
 </Pane>
