--- a/src/main/resources/ihm/annuaire-view.fxml
+++ b/src/main/resources/ihm/annuaire-view.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1064.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ihm.accueilController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1064.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ihm.annuaireController">
    <children>
       <AnchorPane prefHeight="81.0" prefWidth="1064.0" style="-fx-background-color: #4C6B77;">
          <children>
@@ -54,26 +54,46 @@
             </ImageView>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="236.0" layoutY="150.0" prefHeight="150.0" prefWidth="533.0">
-         <children>
-            <ListView prefHeight="150.0" prefWidth="592.0" />
-            <ImageView fx:id="img_ent_default" layoutX="37.0" layoutY="22.0">
-               <image>
-                  <Image url="@../img/entreprise_default.png" />
-               </image>
-            </ImageView>
-            <Label fx:id="nomEntreprise" alignment="CENTER" layoutX="260.0" prefHeight="79.0" prefWidth="254.0" text="Entreprise" textAlignment="JUSTIFY">
-               <font>
-                  <Font size="49.0" />
-               </font>
-            </Label>
-            <Button fx:id="details" layoutX="526.0" layoutY="114.0" mnemonicParsing="false" text="Détails" />
-            <Label fx:id="villeEntreprise" alignment="CENTER" layoutX="303.0" layoutY="92.0" prefHeight="35.0" prefWidth="169.0" text="Ville" textAlignment="CENTER">
-               <font>
-                  <Font size="24.0" />
-               </font>
-            </Label>
-         </children>
-      </AnchorPane>
+      <ListView fx:id="myListView" layoutX="232.0" layoutY="129.0" prefHeight="380.0" prefWidth="600.0" />
+      <ImageView fitHeight="262.0" fitWidth="116.0" layoutX="70.0" layoutY="148.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../img/Hotel.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="161.0" fitWidth="206.0" layoutX="845.0" layoutY="226.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../img/Restaurant%203.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="113.0" fitWidth="87.0" layoutX="47.0" layoutY="339.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../img/Group%208.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="87.0" fitWidth="83.0" layoutX="959.0" layoutY="359.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../img/Group%207%20(1).png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="56.0" fitWidth="26.0" layoutX="197.0" layoutY="352.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../img/Teardrop%20Tree.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="87.0" fitWidth="38.0" layoutX="1004.0" layoutY="466.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../img/Round%20Tree.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="56.0" fitWidth="26.0" layoutX="1030.0" layoutY="497.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../img/Teardrop%20Tree.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="107.0" fitWidth="93.0" layoutX="885.0" layoutY="427.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../img/Group%2010.png" />
+         </image>
+      </ImageView>
    </children>
 </Pane>
