--- a/src/main/resources/ihm/admin-crea-entreprise-view.fxml
+++ b/src/main/resources/ihm/admin-crea-entreprise-view.fxml
@@ -12,7 +12,7 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1064.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ihm.adminCreaEntreprise">
     <children>
-      <ImageView fitHeight="488.0" fitWidth="1064.0" layoutY="112.0">
+      <ImageView fitHeight="381.0" fitWidth="1064.0" layoutX="4.0" layoutY="219.0">
          <image>
             <Image url="@../img/Cityscape.png" />
          </image>
@@ -63,15 +63,10 @@
                   <Font name="Roboto Condensed Bold" size="48.0" />
                </font>
             </Label>
-            <Button fx:id="valider" layoutX="176.0" layoutY="456.0" mnemonicParsing="false" onAction="#sendInscription" prefHeight="35.0" prefWidth="131.0" style="-fx-background-color: #20DF7F; -fx-cursor: hand;" text="Valider">
-               <font>
-                  <Font name="Roboto Condensed" size="18.0" />
-               </font>
-            </Button>
             <AnchorPane layoutY="74.0" prefHeight="25.0" prefWidth="483.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="75.0">
                <children>
                   <TextField fx:id="num_tel" layoutX="155.0" layoutY="1.0" prefHeight="29.0" prefWidth="230.0" promptText="Numéro de l'entreprise" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="3.0" />
-                  <TextField fx:id="nom1" layoutX="7.0" layoutY="3.0" prefHeight="29.0" prefWidth="230.0" promptText=" Nom entreprise" />
+                  <TextField fx:id="nom" layoutX="7.0" layoutY="3.0" prefHeight="29.0" prefWidth="230.0" promptText=" Nom entreprise" />
                </children>
             </AnchorPane>
             <AnchorPane layoutX="-2.0" layoutY="145.0" prefHeight="32.0" prefWidth="483.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="125.0">
@@ -117,6 +112,7 @@
             <Label fx:id="wrongReponse" alignment="CENTER" layoutX="99.0" layoutY="394.0" prefHeight="17.0" prefWidth="312.0" textFill="RED" />
             <Label layoutX="26.0" layoutY="284.0" text="Nombre de stagiare Max" />
             <ChoiceBox fx:id="nbStagiaire" layoutX="232.0" layoutY="280.0" prefHeight="25.0" prefWidth="137.0" />
+            <TextField fx:id="description" alignment="CENTER" layoutX="140.0" layoutY="427.0" prefHeight="64.0" prefWidth="230.0" promptText="Description de l'entreprise" />
          </children>
       </AnchorPane>
       <AnchorPane fx:id="retourLoggin" layoutX="63.0" layoutY="15.0" onMouseClicked="#retourLoggin" prefHeight="51.0" prefWidth="57.0" style="-fx-cursor: hand;" />
@@ -125,5 +121,10 @@
             <Image url="@../img/Group%201.png" />
          </image>
       </ImageView>
+      <Button fx:id="valider" layoutX="887.0" layoutY="292.0" mnemonicParsing="false" onAction="#sendCreationEnt" prefHeight="35.0" prefWidth="131.0" style="-fx-background-color: #20DF7F; -fx-cursor: hand;" text="Valider">
+         <font>
+            <Font name="Roboto Condensed" size="18.0" />
+         </font>
+      </Button>
     </children>
 </Pane>
