--- a/src/main/resources/ihm/ficheEntreprise-view.fxml
+++ b/src/main/resources/ihm/ficheEntreprise-view.fxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -32,11 +34,22 @@
                   <Font name="Roboto Condensed Bold" size="36.0" />
                </font>
             </Label>
-            <ImageView fx:id="isFavoris" fitHeight="36.0" fitWidth="48.0" layoutX="627.0" layoutY="14.0" onMouseClicked="#changeStar" pickOnBounds="true" preserveRatio="true" style="-fx-cursor: hand;">
+            <ImageView fx:id="isFavoris" fitHeight="36.0" fitWidth="48.0" layoutX="645.0" layoutY="11.0" onMouseClicked="#changeStar" pickOnBounds="true" preserveRatio="true" style="-fx-cursor: hand;">
                <image>
                   <Image url="@img/star.png" />
                </image>
             </ImageView>
+            <TextArea fx:id="commentaire" layoutX="9.0" layoutY="338.0" prefHeight="78.0" prefWidth="673.0" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" />
+            <Button fx:id="buttonSendCommentaire" layoutX="7.0" layoutY="422.0" mnemonicParsing="false" onMouseClicked="#sendCommentaire" prefHeight="30.0" prefWidth="674.0" style="-fx-background-color: #4BE397;" text="Poster le commentaire" textFill="WHITE" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="7.0" AnchorPane.rightAnchor="7.0">
+               <font>
+                  <Font name="System Bold Italic" size="14.0" />
+               </font>
+            </Button>
+            <Label fx:id="commentaireIsSent" alignment="CENTER" layoutX="166.0" layoutY="364.0" text="Votre commentaire à bien été pris en compte" textFill="#224957" AnchorPane.leftAnchor="7.0" AnchorPane.rightAnchor="7.0">
+               <font>
+                  <Font name="System Bold Italic" size="18.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
    </children>
